--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Inter', sans-serif !important;
+
 }
 
 code {
@@ -23,4 +26,49 @@ code {
 }
 .navbar-nav{
   margin-left: auto !important;
+}
+
+.smallimg{
+  height: 200px;
+  width:100% !important;
+  border-radius:5px !important;
+}
+
+h1{
+  font-size: 20px !important;
+}
+.btn{
+  background-color: chartreuse;
+  color: black !important;
+  box-shadow: none !important;
+
+}
+.bs{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  margin-top:20px !important ;
+  border-radius: 5px !important;
+  padding: 20px !important;
+}
+.bigimg{
+  height:400px !important;
+  border-radius: 5px;
+  
+}
+.loader{
+  display: block;
+  margin: 0 auto;
+  border-color: red;
+    
+};
+input{
+  box-shadow: none !important;
+  margin: top 10px; 
+  border: 1px solid black !important;
+}
+h2{
+  font-size:30px !important;
+  padding:20px;
+  font-weight: bold !important;
+  text-align: center;
+
 }
