--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Inter', sans-serif !important;
+  background-image:url(https://thumbs.dreamstime.com/b/summer-tropical-beach-peaceful-vacation-background-art-82795512.jpg) ;
+  background-repeat: no-repeat  !important;
+  background-size:  100%;
 
 }
 
@@ -27,7 +30,9 @@ code {
 .navbar-nav{
   margin-left: auto !important;
 }
-
+.container{
+  background-color: white;
+}
 .smallimg{
   height: 200px;
   width:100% !important;
